--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "index/index.html",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "sass": "node-sass -w --recursive styles/styles.scss -o ."
+        "sass": "node-sass -w --recursive styles/styles.scss -o stylesCss"
     },
     "repository": {
         "type": "git",
